docs/book/samples/ch01/unused_check.out
error[unused]: unused binding `greeting`
  --> unused_check.kso:2:1
   2 | greeting = "hello"
       ^
